--- a/MyPaint/MyPaint/MyPaint.csproj
+++ b/MyPaint/MyPaint/MyPaint.csproj
@@ -36,6 +36,7 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Messaging" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -62,11 +63,11 @@
     <Compile Include="CustomControl\DrawBox.cs">
       <SubType>Component</SubType>
     </Compile>
-    <Compile Include="CustomUserControl\DrawPanel.cs">
+    <Compile Include="CustomUserControl\ShapePanel.cs">
       <SubType>UserControl</SubType>
     </Compile>
-    <Compile Include="CustomUserControl\DrawPanel.Designer.cs">
-      <DependentUpon>DrawPanel.cs</DependentUpon>
+    <Compile Include="CustomUserControl\ShapePanel.Designer.cs">
+      <DependentUpon>ShapePanel.cs</DependentUpon>
     </Compile>
     <Compile Include="MyPaint.cs">
       <SubType>Form</SubType>
@@ -79,7 +80,13 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="PaintTool\ShapeTool.cs" />
+    <Compile Include="PaintControl\ShapePaint.cs" />
+    <Compile Include="CustomUserControl\ToolPanel.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="CustomUserControl\ToolPanel.Designer.cs">
+      <DependentUpon>ToolPanel.cs</DependentUpon>
+    </Compile>
     <EmbeddedResource Include="CustomUserControl\ColorPanel.resx">
       <DependentUpon>ColorPanel.cs</DependentUpon>
     </EmbeddedResource>
@@ -89,8 +96,11 @@
     <EmbeddedResource Include="CustomControl\DrawBox.resx">
       <DependentUpon>DrawBox.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="CustomUserControl\DrawPanel.resx">
-      <DependentUpon>DrawPanel.cs</DependentUpon>
+    <EmbeddedResource Include="CustomUserControl\ShapePanel.resx">
+      <DependentUpon>ShapePanel.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="CustomUserControl\ToolPanel.resx">
+      <DependentUpon>ToolPanel.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="MyPaint.resx">
       <DependentUpon>MyPaint.cs</DependentUpon>
