--- a/MyPaint/MyPaint/MyPaint.csproj
+++ b/MyPaint/MyPaint/MyPaint.csproj
@@ -81,6 +81,7 @@
     <Compile Include="CustomControl\PopupTextBox.cs">
       <SubType>Component</SubType>
     </Compile>
+    <Compile Include="PaintControl\ResizePaint.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="PaintControl\ShapePaint.cs" />
